# tmuxdesk

./: .gitignore  README.md  deploy.sh  flake.nix  fleet.conf  index.html
conf/: ext.conf  host-finml.conf  host-hub2.conf  host-hyle.conf  host-karlsruhe.conf  host-nabla.conf  tmux.base.conf
docs/: HANDOFF.md  fallback-compute.md  index.md
docs/architecture/: adding-nodes.md  config-layers.md  deploy-flow.md  keybinding-map.md  mesh-protocol.md
docs/essays/: 00-de-orchestratione.md  01-the-fleet.md  02-the-architecture.md  03-the-interaction-modes.md  04-the-infrastructure.md  05-the-resource.md  06-the-import.md  07-the-reflection.md
fleet-status/: Cargo.toml
fleet-status/src/: main.rs
iterm/: install-profiles.sh  session-picker.sh  tmuxdesk-profiles.json
presets/: agent-orchestra.sh  dev-3pane.sh  gpu-monitor.sh  monitor-4pane.sh  nix-workshop.sh  pair-2pane.sh
web/: package-lock.json  package.json  shadow-cljs.edn
web/public/: index.html
web/public/css/: style.css
web/public/js/: main.js  manifest.edn
web/src/tmuxdesk/: core.cljs  essays.cljs  sigils.cljs
