[package]
name = "fleet-status-server"
version = "0.1.0"
edition = "2021"
description = "Tiny HTTP server exposing tmuxdesk fleet mesh state as JSON"

[dependencies]
tiny_http = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
opt-level = "s"
